WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129915
Continue hangs when performing for-of over arguments
https://bugs.webkit.org/show_bug.cgi?id=129915
Summary
Continue hangs when performing for-of over arguments
Oliver Hunt
Reported
2014-03-07 14:24:55 PST
Continue hangs when performing for-of over arguments
Attachments
Patch
(4.72 KB, patch)
2014-03-07 16:18 PST
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2014-03-07 14:29:55 PST
***
Bug 129917
has been marked as a duplicate of this bug. ***
Oliver Hunt
Comment 2
2014-03-07 14:30:08 PST
***
Bug 129916
has been marked as a duplicate of this bug. ***
Oliver Hunt
Comment 3
2014-03-07 16:18:06 PST
Created
attachment 226183
[details]
Patch
Geoffrey Garen
Comment 4
2014-03-07 16:35:33 PST
Comment on
attachment 226183
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=226183&action=review
r=me
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2451 > + emitJump(loopCondition.get());
Our other looping nodes prefer to emit op_less twice -- once at the head of the loop, and once at the tail. That makes the CFG more amenable to optimization.
Oliver Hunt
Comment 5
2014-03-07 17:12:21 PST
Committed
r165306
: <
http://trac.webkit.org/changeset/165306
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug