Continue hangs when performing for-of over arguments https://bugs.webkit.org/show_bug.cgi?id=129915

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Put the continue label in the right place

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitEnumeration):

LayoutTests:

Add tests

* js/for-of-arguments-continue-hang-expected.txt: Added.
* js/for-of-arguments-continue-hang.html: Added.
* js/script-tests/for-of-arguments-continue-hang.js: Added.
(test):

Canonical link: https://commits.webkit.org/147937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165306 268f45cc-cd09-0410-ab3c-d52691b4dbfc